Added JUnits for coverage